fix: horizontal scroll for steps com

--- a/src/components/Blog/BlogCard/blogcard.scss
+++ b/src/components/Blog/BlogCard/blogcard.scss
@@ -4,15 +4,7 @@
   display: flex;
 
 
-  .wrapper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    background-color: #ebf3fe;
-    justify-content: space-between;
-    gap: 10px;
-    position: relative;
+
 
     .blog-container {
       display: flex;
@@ -81,4 +73,4 @@
 
     }
 
-  }
+  
