--- a/src/components/Blog/blog.scss
+++ b/src/components/Blog/blog.scss
@@ -2,15 +2,16 @@
 
 .blog{
   display: flex;
+  
 
   .wrapper{
     width: 100%;
-    height:100%;
+    height: 100%;
     display: flex;
     align-items: center;
     background-color: #ebf3fe;
     justify-content: space-between;
-    gap: 10px;
+    
     position: relative;
 
     @include mobile{
@@ -97,7 +98,8 @@
       justify-content: center;
       flex-direction: column;
       margin-left: 100px; 
-      width: 70%;   
+      width: 70%;
+      
       @include mobile{
         display: flex;
         margin-left: 0;
@@ -106,16 +108,17 @@
 
         
       .row{
+        padding: 20px;
         display: flex;
         flex-direction: row;
         flex: 2;
         flex-wrap: wrap;
-        gap: 25px;
+        gap: 18px;
  
         @include mobile {
           display: flex;
           flex-direction: column;
-          gap: 25px;
+          gap: 18px;
         }
       }
      
