--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -37,7 +37,7 @@
           display: flex;
           padding-left: 10px;
           font-size:24px;
-          width: 400px;
+          width: 250px;
           margin-left: 10px;
           margin-top: 10px;
           margin-bottom: 20px;
