--- a/src/components/steps/steps.scss
+++ b/src/components/steps/steps.scss
@@ -11,6 +11,7 @@
 
   @include mobile{
     display: flex;
+   
     flex-direction: column;
     margin: 0;
     padding: 20px;
@@ -34,18 +35,25 @@
       position: sticky;
       align-items: center;
       justify-content: center;
+      text-align: center;
+      line-height: 50px;
       top: 20px;
       height: 600px;
       border-radius: 32px;
       background: whitesmoke;;
       box-shadow: 5px 5px 30px #a1a1a1,
             -5px -5px 30px #ffffff;
-      color: rgb(166, 57, 209);
+      color: #4b1794;
       padding: 20px;
+
+      @include mobile{
+        line-height: 40px;
+        width: 100%;
+      }
 
      
         h1{
-          font-size: 26px;
+          font-size: clamp(12px, 4vw, 16px);
         }
         
     }
@@ -58,27 +66,37 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
 
   @include mobile {
       display: flex;
-      max-width: 100%;
+      max-width: 100%;  
     }
   .card{
     max-width: 400px;
     position: sticky;
     flex-direction: column;
       justify-content: center;
+      align-items: center;
       display: flex;
     top: 20px;
-    margin-bottom: 30px;
     width: 100%;
-    height: 400px;
-    color: rgb(96, 11, 175);
+    height: 260px;
+    color: #4b1794;
     padding: 50px;
     border-radius: 32px;
     background: whitesmoke;;
     box-shadow: 5px 5px 30px #a1a1a1,
-          -5px -5px 30px #ffffff;  
+          -5px -5px 30px #ffffff; 
+
+          p {
+              line-height: 30px;
+            }
+
+          @include mobile {
+              display: flex;
+           width: 100%;     
+            }
   }
 
     .card1 {
@@ -87,17 +105,27 @@
       top: 20px;
       display: flex;
       flex-direction: column;
-        justify-content: center;
+      justify-content: center;
+      align-items: center;
       margin-bottom: 10px;
       width: 100%;
-      height: 400px;
+      height: 260px;
       color: rgb(255, 255, 255);
       padding: 50px;
       border-radius: 32px;
-      background: rgba(186, 7, 209, 0.925);
+      background: #4b1794;
       ;
       box-shadow: 5px 5px 30px #a1a1a1,
         -5px -5px 30px #ffffff;
+
+        p{
+          line-height: 30px;
+        }
+
+          @include mobile {
+              display: flex;
+              width: 100%;
+            }
     }
   
   
